# snrg_bi

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
snrg_bi/: hooks.py  modules.txt  setup.py
snrg_bi/ai/: report_tools.py
snrg_bi/snrg_bi/report/customer_basket_gap/: customer_basket_gap.js  customer_basket_gap.json  customer_basket_gap.py
snrg_bi/snrg_bi/report/customer_item_gap/: customer_item_gap.js  customer_item_gap.json  customer_item_gap.py
snrg_bi/snrg_bi/report/dropped_item_customers/: dropped_item_customers.js  dropped_item_customers.json  dropped_item_customers.py
snrg_bi/snrg_bi/report/item_penetration_by_city/: item_penetration_by_city.js  item_penetration_by_city.json  item_penetration_by_city.py
snrg_bi/snrg_bi/report/salesperson_item_opportunities/: salesperson_item_opportunities.js  salesperson_item_opportunities.json  salesperson_item_opportunities.py
snrg_bi/snrg_bi/workspace/snrg_bi/: snrg_bi.json
