[project]
name = "snrg_bi"
authors = [
    { name = "SNRG" }
]
description = "ERPNext business intelligence reports and AI-ready reporting APIs"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["setuptools >=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "snrg_bi.__version__" }

[tool.setuptools.packages.find]
include = ["snrg_bi*"]

[tool.setuptools.package-data]
snrg_bi = ["**/*.json", "**/*.js", "**/*.txt"]

[tool.bench.dev-dependencies]
